# LockTrace

./: CMakeLists.txt  LockTrace.sln  README  README.md
LockTrace/: LockTrace.vcxproj  main.cpp
Source/: Camera.h  Hitable.h  HitableList.h  Material.h  Ray.h  Sphere.h  main.cpp  vec3.h
